--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "npm run test -- --watch"
   },
   "engines": {
-    "node": "9.2.0"
+    "node": "9.2.0",
+    "npm": "5.5.1"
   },
   "author": "",
   "license": "ISC",
